fixes jumping issue

--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -602,7 +602,7 @@
     .main-content {
         display: flex;
         flex-direction: column;
-
+        height: 100vh;
     }
     .main-empty-1 {
         display: block;
@@ -728,6 +728,13 @@
         padding-left: 20px;
         z-index: 3;
 
+    }
+    .navigation-home {
+       .nav-link {
+           font-size: 1.2em;
+           font-weight: 600;
+           color: #fff;
+       }
     }
     .nav-icon {
         margin: 1em;
@@ -929,6 +936,17 @@ and (max-width: 489px) {
     }
 }
 
+@media screen and (min-width: 600px) { 
+    .home-centered-text {
+        width: 450px;
+        margin-left: 10%;
+    }
+}
+
+.intro-text {
+    position: relative;
+}
+
 .large-text {
     font-size: 5em;
     margin: 20px 0;
@@ -972,13 +990,10 @@ and (max-width: 489px) {
 
 .highlighted-word {
     background: #fff;
-    padding: 8px;
+    padding: 4.5px;
     color: #181c45;
     margin-left: 5px;
 }
-
-
-
 
 .link-text {
     color: #D26442;
